--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1906,92 +1906,53 @@ $$\medblackdiamond$$
 \section{p79-exercise 10}
 \begin{tcolorbox}
 If $\theta, \phi$ are colatitude and azimuth on a sphere, and we take
-$$x^2 = \theta \cos \phi, \ x^2=\theta\sin \phi$$.
-Calculate the Christoffels symbols for the coordinate system $x^1, x^2$ and show tht they vanish at the point $\theta = 0$
+$$x^1 = \theta \cos \phi, \ x^2=\theta\sin \phi$$
+Calculate the Christoffels symbols for the coordinate system $x^1, x^2$ and show that they vanish at the point $\theta = 0$
 \end{tcolorbox}
-We have, page 48  (2.509):
 \begin{align}
-\ [mn,r]^, =[pq,s]\pdv{x^p}{x^{,m}}\pdv{x^q}{x^{,n}}\pdv{x^s}{x^{,r}}+ a_{pq}\pdv{x^p}{x^{,r}}\pdv{x^q}{x^{,m}}{x^{,n}}
+\text{We have, page 48  (2.507) :}\spatie\Gamma_{mn}^{,r} =\Gamma_{pq}^{s}\pdv{x^{,r}}{x^s}\pdv{x^{p}}{x^{,m}}\pdv{x^{q}}{x^{,n}}+\pdv{x^{,r}}{x^s}\pdv{x^s}{x^{,m}}{x^{,n}}
 \end{align}
-We know also that in a spherical coordinate system all $[pq,s]$ vanish except for
+The calculations are really basic but lengthy and only train your skills in basic calculus. So I will only calculate $\Gamma_{11}^{,1}$.\\
+We know that in a spherical coordinate system all $\Gamma_{pq}^{,s}$ vanish except for $\Gamma_{\phi\phi}^{\theta} = -\sin\theta\cos\theta$ and $
+\Gamma_{\phi\theta}^{\phi} =  \cot\theta$.
 \begin{align}
-\ [\phi \phi, \theta ] &= -\sin\theta\cos\theta\\
-\ [\phi \theta, \phi  ] &= [ \theta \phi, \phi  ] = \sin\theta\cos\theta\\
-\text{note that }\quad  [\phi \phi, \theta ] &= -[\phi \theta, \phi  ]\\
-\text{and}\quad \left( a_{\theta\phi}\right) &= \begin{pmatrix}
- 1& 0 \\
- 0& \sin^2 \theta \\
-\end{pmatrix}\\
-\text{and}\quad \left( a^{\theta\phi}\right) &= \begin{pmatrix}
- 1& 0 \\
- 0& \frac{1}{\sin^2 \theta }\\
-\end{pmatrix}\\
-\text{then}\quad [11,1]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{1}\phi + [\phi\phi,\theta]\partial_{1}\phi\partial_{1}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{11}\phi\\
-\ [12,1]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{1}\phi + [\phi\phi,\theta]\partial_{1}\phi\partial_{2}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{12}\phi\\
-\ [22,1]^, &= 2[\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{1}\phi + [\phi\phi,\theta]\partial_{2}\phi\partial_{2}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{22}\phi\\
-\ [11,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{2}\phi + [\phi\phi,\theta]\partial_{1}\phi\partial_{1}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{11}\phi\\
-\ [12,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{2}\phi + [\phi\phi,\theta]\partial_{1}\phi\partial_{2}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{12}\phi\\
-\ [22,2]^, &= 2[\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{2}\phi + [\phi\phi,\theta]\partial_{2}\phi\partial_{2}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{22}\phi\\
-\end{align}
-\begin{align}
-\text{(4):}\quad [11,1]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{1}\phi - [\theta\phi,\phi]\partial_{1}\phi\partial_{1}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{11}\phi\\
-\ [12,1]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{1}\phi  - [\theta\phi,\phi]\partial_{1}\phi\partial_{2}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{12}\phi\\
-\ [22,1]^, &= 2[\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{1}\phi - [\theta\phi,\phi]\partial_{2}\phi\partial_{2}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{22}\phi\\
-\ [11,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{2}\phi - [\theta\phi,\phi]\partial_{1}\phi\partial_{1}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{11}\phi\\
-\ [12,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{2}\phi - [\theta\phi,\phi]\partial_{1}\phi\partial_{2}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{12}\phi\\
-\ [22,2]^, &= 2[\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{2}\phi - [\theta\phi,\phi]\partial_{2}\phi\partial_{2}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{22}\phi\\
-\text{so:}\quad [11,1]^, &= [\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{1}\phi +a_{\theta\theta}\partial_{1}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{11}\phi\\
-\ [12,1]^, &= [\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{1}\phi  +a_{\theta\theta}\partial_{1}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{12}\phi\\
-\ [22,1]^, &= 2[\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{1}\phi - [\theta\phi,\phi]\partial_{2}\phi\partial_{2}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{22}\phi\\
-\ [11,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{2}\phi - [\theta\phi,\phi]\partial_{1}\phi\partial_{1}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{11}\phi\\
-\ [12,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{2}\phi - [\theta\phi,\phi]\partial_{1}\phi\partial_{2}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{12}\phi\\
-\ [22,2]^, &= [\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{2}\phi +a_{\theta\theta}\partial_{2}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{22}\phi\\
-\text{also}\ &\left \{ \begin{array}{lllll}
-\partial_{1} \theta = 2\frac{x^1}{\rho}& \partial_{2} \theta =2\frac{x^2}{\rho}&\partial^2_{11} \theta = 2\frac{\rho^2 -(x^1)^2}{\rho ^3}& \partial^2_{12} \theta = 2\frac{x^1x^2}{\rho^3}  & \partial^2_{22} \theta = 2\frac{\rho^2 -(x^2)^2}{\rho ^3}\\\\
-\partial_{1} \phi = -\frac{x^2}{\rho^2}& \partial_{2} \phi = -\frac{x^1}{\rho^2}&\partial^2_{11} \phi = 4\frac{x^1 x^2}{\rho ^3}& \partial^2_{12} \phi = -\frac{\rho -(x^1)^2}{\rho ^3} & \partial^2_{22} \phi = -4\frac{x^1 x^2}{\rho ^3} \\
+\boldsymbol{\Gamma_{11}^{,1}} &=\boldsymbol{\Gamma_{\phi\phi}^{\theta}\partial_{\theta}{x^{1}}\partial_{1}\phi\partial_{1}\phi+ 2\Gamma_{\phi\theta}^{\phi}\partial_{\phi}{x^{1}}\partial_{1}\theta\partial_{1}\phi+\partial_{\theta}{x^{1}}\partial^2_{11}{\theta}+\partial_{\phi}{x^{1}}\partial^2_{11}{\phi}}\\
+\text{we have}\quad & \left \{ \begin{array}{l}
+\ x^1 = \theta\cos\phi\\
+\ x^2 = \theta\sin\phi\
+\end{array}\right. \quad \Rightarrow \quad \left \{ \begin{array}{l}
+\theta = \sqrt{(x^1)^2+(x^2)^2}\\
+\phi = \arctan \frac{x^2}{x^1}
 \end{array}\right.\\
-\text{with} \quad \rho &= \sqrt{(x^1)^2+(x^2)^2} \ \text{and} \quad \tau = (x^1)^2-(x^2)^2\\
-\ & \left \{ \begin{array}{l}
-\partial_{1}\theta\partial_{1}\phi\partial_{1}\phi = 2\frac{x^1}{\rho}(-\frac{x^2}{\rho ^2})^2  = 2\frac{x^1 (x^2)^2}{\rho^3}\\
-\partial_{1}\theta\partial_{2}\phi\partial_{1}\phi = 2\frac{x^1}{\rho}(-\frac{x^1}{\rho ^2})(-\frac{x^2}{\rho ^2})= 2\frac{(x^1)^2x^2}{\rho^5}\\
-\partial_{2}\theta\partial_{2}\phi\partial_{1}\phi =2\frac{x^2}{\rho}(-\frac{x^1}{\rho ^2})(-\frac{x^2}{\rho ^2})=2\frac{x^1(x^2)^2}{\rho^5}\\
-\partial_{2}\phi\partial_{2}\phi\partial_{1}\theta =2(-\frac{x^1}{\rho ^2})^2 \frac{x^1}{\rho }= 2\frac{(x^1)^3}{\rho^3}\\
-\partial_{1}\theta\partial_{1}\phi\partial_{2}\phi = 2\frac{x^1}{\rho}(-\frac{x^2}{\rho ^2})(-\frac{x^1}{\rho ^2})=2\frac{(x^1)^2x^2}{\rho^5} \\
-\partial_{1}\phi\partial_{1}\phi\partial_{2}\theta = 2 (-\frac{x^2}{\rho ^2})^2\frac{x^2}{\rho}= 2\frac{(x^2)^3}{\rho^5}\\
-\partial_{1}\theta\partial_{2}\phi\partial_{2}\phi =2\frac{x^1}{\rho}(-\frac{x^1}{\rho ^2})(-\frac{x^1}{\rho ^2})= 2\frac{(x^1)^3}{\rho^5}\\
-\partial_{1}\phi\partial_{2}\phi\partial_{2}\theta= 2 (-\frac{x^2}{\rho ^2})(-\frac{x^1}{\rho ^2}) \frac{x^2}{\rho}= 2\frac{x^1(x^2)^2}{\rho^5}\\
-\partial_{2}\theta\partial_{2}\phi\partial_{2}\phi = 2\frac{x^2}{\rho }(-\frac{x^1}{\rho ^2})^2 = 2\frac{(x^1)^2 x^2}{\rho^5}
-\end{array} \right.\\
+\text{so}\ &\left \{ \begin{array}{ll}
+\partial_{1} \theta = \frac{x^1}{\theta} = \cos\phi & \partial_{1} \phi = -\frac{x^2}{\theta^2} = -\frac{\sin\phi}{\theta}  \\\\
+\partial_{\theta} x^1 = \cos\phi & \partial_{\phi} x^1 = -\theta\sin\phi\\\\
+\partial^2_{11} \theta = \frac{\theta^2 -(x^1)^2}{\theta ^3} = \frac{\sin^2\phi}{\theta} & \partial^2_{11} \phi =2\frac{x^1 x^2}{\theta^4}= 2\frac{\cos\phi \sin\phi}{\theta^2}
+\end{array}\right.\\
+\Gamma_{11}^{,1} &=\Gamma_{\phi\phi}^{\theta}\cos\phi\frac{\sin^2\phi}{\theta^2}+ 2\Gamma_{\phi\theta}^{\phi}(-\theta\sin\phi)\cos\phi(-\frac{\sin\phi}{\theta} )+\cos\phi\frac{\sin^2\phi}{\theta}+(-\theta\sin\phi)(2\frac{\cos\phi \sin\phi}{\theta^2})\\
+\ &= -\sin\theta\cos\theta\frac{\cos\phi \sin^2\phi}{\theta^2}+ 2\cot\theta\cos\phi\sin^2\phi+\frac{\cos\phi\sin^2\phi}{\theta}-2\frac{\cos\phi \sin^2\phi}{\theta}\\
+\ &= (2\cot\theta -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2})\cos\phi\sin^2\phi
 \end{align}
+$$\meddiamond$$
+\newpage
+Does $\boldsymbol{\Gamma_{11}^{,1}}$ vanish for $\theta \rightarrow0$ ? \\The problematic term in (7) is $2\cot\theta -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2}$ for which $\lim_{\theta \to 0 }= \pm \infty \mp \infty \mp \infty$ is undefined. 
 \begin{align}
-\ & \left \{ \begin{array}{l}
-\partial_{1}\theta\partial_{1}\phi\partial_{1}\phi =   2\frac{x^1 (x^2)^2}{\rho^5}\\\\
-\partial_{1}\theta\partial_{2}\phi\partial_{1}\phi =  2\frac{(x^1)^2x^2}{\rho^5}\\\\
-\partial_{2}\theta\partial_{2}\phi\partial_{1}\phi =2\frac{x^1(x^2)^2}{\rho^5}\\\\
-\partial_{1}\theta\partial_{1}\phi\partial_{2}\phi = 2\frac{(x^1)^2x^2}{\rho^5} \\\\
-\partial_{1}\phi\partial_{1}\phi\partial_{2}\theta =  2\frac{(x^2)^3}{\rho^5}\\\\
-\partial_{1}\theta\partial_{2}\phi\partial_{2}\phi =2\frac{(x^1)^3}{\rho^5}\\\\
-\partial_{1}\phi\partial_{2}\phi\partial_{2}\theta=2\frac{x^1(x^2)^2}{\rho^5}\\\\
-\partial_{2}\theta\partial_{2}\phi\partial_{2}\phi =2\frac{(x^1)^2 x^2}{\rho^5}
-\end{array} \right.
-\Rightarrow \quad  \left \{ \begin{array}{l}
-\ A = \partial_{1}\theta\partial_{1}\phi\partial_{1}\phi =\partial_{2}\theta\partial_{2}\phi\partial_{1}\phi =\partial_{1}\phi\partial_{2}\phi\partial_{2}\theta\\
-\ B = \partial_{1}\theta\partial_{2}\phi\partial_{1}\phi =\partial_{1}\theta\partial_{1}\phi\partial_{2}\phi= \partial_{2}\theta\partial_{2}\phi\partial_{2}\phi\\
-\ C = \partial_{1}\phi\partial_{1}\phi\partial_{2}\theta\\
-\ D = \partial_{1}\theta\partial_{2}\phi\partial_{2}\phi 
-\end{array} \right.\\
-\text{so:}\quad [11,1]^, &= [\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{1}\phi +a_{\theta\theta}\partial_{1}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{11}\phi\\
-\ [12,1]^, &= [\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{1}\phi  +a_{\theta\theta}\partial_{1}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{12}\phi\\
-\ [22,1]^, &= 2[\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{1}\phi - [\theta\phi,\phi]\partial_{2}\phi\partial_{2}\phi\partial_{1}\theta+a_{\theta\theta}\partial_{1}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{22}\phi\\
-\ [11,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{1}\phi\partial_{2}\phi - [\theta\phi,\phi]\partial_{1}\phi\partial_{1}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{11}\phi\\
-\ [12,2]^, &= 2[\theta\phi,\phi]\partial_{1}\theta\partial_{2}\phi\partial_{2}\phi - [\theta\phi,\phi]\partial_{1}\phi\partial_{2}\phi\partial_{2}\theta+a_{\theta\theta}\partial_{2}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{12}\phi\\
-\ [22,2]^, &= [\theta\phi,\phi]\partial_{2}\theta\partial_{2}\phi\partial_{2}\phi +a_{\theta\theta}\partial_{2}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{22}\phi\\
-\text{so:}\quad [11,1]^, &= A[\theta\phi,\phi]+a_{\theta\theta}\partial_{1}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{11}\phi\\
-\ [12,1]^, &= B[\theta\phi,\phi] +a_{\theta\theta}\partial_{1}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{12}\phi\\
-\ [22,1]^, &= 2A[\theta\phi,\phi]- D[\theta\phi,\phi]+a_{\theta\theta}\partial_{1}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{1}\phi\partial^2_{22}\phi\\
-\ [11,2]^, &= 2B[\theta\phi,\phi] - C[\theta\phi,\phi]+a_{\theta\theta}\partial_{2}\theta\partial^2_{11}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{11}\phi\\
-\ [12,2]^, &= 2D[\theta\phi,\phi]\partial_{1} - A[\theta\phi,\phi]+a_{\theta\theta}\partial_{2}\theta\partial^2_{12}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{12}\phi\\
-\ [22,2]^, &= B[\theta\phi,\phi]\partial_{2}+a_{\theta\theta}\partial_{2}\theta\partial^2_{22}\theta+a_{\phi\phi}\partial_{2}\phi\partial^2_{22}\phi\\
-\end{align}
+\text{Consider}\quad L_{+}& = \lim_{\theta \to 0_{+}}2\cot\theta -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2} \\
+\text{We have}\quad &\begin{array}{lllll}
+\sin\theta , \theta \ge 0&\sin\theta \leq \theta&\frac{1}{\theta}\leq \frac{1}{\sin \theta}& 0 \ge \cos \theta \leq 1\end{array}\\
+\text{so} \quad L_{+}&= \lim_{\theta \to 0_{+}}2\frac{\cos\theta}{\sin\theta} -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2} \\
+\ &\geq \lim_{\theta \to 0_{+}}2\frac{\cos\theta}{\theta} -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2} \\
+\ &\geq \lim_{\theta \to 0_{+}}2\frac{\cos\theta}{\theta} -\frac{1}{\theta}-\frac{\cancel{\theta}\cos\theta}{\theta^{\cancel{2} }}\\
+\ &\geq \lim_{\theta \to 0_{+}}\frac{\cos\theta-1}{\theta}\\
+\text{(l'Hospitale rule)}\Rightarrow\quad L_{+}&\geq 0\\
+\text{also} \quad L_{+}&= \lim_{\theta \to 0_{+}}2\frac{\cos\theta}{\sin\theta} -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2} \\
+\ &\leq \lim_{\theta \to 0_{+}}2\frac{\cos\theta}{\sin\theta} -\frac{\cos\theta}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2} \\
+\ &\leq \lim_{\theta \to 0_{+}}\cos\theta(\frac{2}{\sin\theta} -\frac{1}{\theta}-\frac{\sin\theta}{\theta^2})\\
+\frac{\sin\theta}{\theta} \leq 1 \quad\Rightarrow\quad &\leq\lim_{\theta \to 0_{+}} \cos\theta(\frac{2}{\sin\theta} -\frac{1}{\theta}-\frac{1}{\theta})\\
+\frac{1}{\sin\theta} \geq \frac{1}{\theta} \quad\Rightarrow\quad &\leq\lim_{\theta \to 0_{+}} \cos\theta(\frac{2}{\theta} -\frac{1}{\theta}-\frac{1}{\theta})\\
+\ & \leq 0\\
+\text{(14) and ((20)}\quad \Rightarrow L_{+}& =0
+\end{align} 
+Considering that $$L_{-} = \lim_{\theta \to 0_{-}}2\cot\theta -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2}$$ is equivalent to  $$L_{+}^{\alpha} = \lim_{\alpha \to 0_{+}}-(2\cot\alpha -\frac{1}{\alpha}-\frac{\sin\alpha\cos\alpha}{\alpha^2})$$ (substitute $\theta = -\alpha$) we conclude that   $$L_{-} =  -L_{+}=0$$. And so $$\left.\Gamma_{11}^{,1}\right|_{\theta=0} =\left.(2\cot\theta -\frac{1}{\theta}-\frac{\sin\theta\cos\theta}{\theta^2})\cos\phi\sin^2\phi\right|_{\theta=0} = 0$$
 $$\medblackdiamond$$
 \newpage
